--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Android Venteliste</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Opdater</string>
+    <string name="navigation_view_item_1">Hjem</string>
+    <string name="navigation_view_item_2">Hvad er Triangering</string>
+    <string name="navigation_view_item_3">Information</string>
+    <string name="navigation_view_item_4">Tilbage</string>
+    <string name="navigation_view_category_1">Acute menu</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
