--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="navigation_view_item_2">Triangering Info</string>
     <string name="navigation_view_item_3">Demo - 1 min</string>
     <string name="navigation_view_item_4">Demo - 2 min</string>
+    <string name="navigation_view_item_5">Hjælp</string>
     <string name="navigation_view_category_1">Android Venteliste Menu</string>
 
     <!-- TODO: Remove or change this placeholder text -->
